flex/flex-tests/testData/js2_highlighting/NoSuperConstructorCall4.js2
package {
  class <error descr="Missed superclass's constructor invocation">NoSuperConstructorCall4</error> extends A {

  }
}
